--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,8 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
 
+@config "./tailwind.config.js";
+@import "tailwindcss";
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
