--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css");
 
-@config "./tailwind.config.js";
-@import "tailwindcss";
+@config "../tailwind.config.js";
+@import "@tailwindcss/postcss";
 
 @tailwind base;
 @tailwind components;
